...
                        ),
                        onClick = {
                            onAClearClicked()
                        }

                    ) {
                        Text(text = "Clear Cart", color = Color.White)

                    }
                }
            }
    }

}

@Composable
fun EmptyCartVompose() {
    Box(Modifier.fillMaxSize(), contentAlignment = Alignment.Center) {
        Text(text = "Yor Cart IS Empty", fontSize = 22.sp)
    }
}

